Controller with 3 Puppies to display on the view added, View for this added too

--- a/PupBuddy CA2 OanaSorin/PupBuddy CA2 OanaSorin.csproj
+++ b/PupBuddy CA2 OanaSorin/PupBuddy CA2 OanaSorin.csproj
@@ -125,8 +125,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\OutdoorMeetings.cs" />
-    <Compile Include="Models\Owner.cs" />
-    <Compile Include="Models\Puppy.cs" />
+    <Compile Include="Models\OwnerModel.cs" />
+    <Compile Include="Models\PuppyModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -165,6 +165,7 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Home\ListPuppies.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
