--- a/PupBuddy CA2 OanaSorin/PupBuddy CA2 OanaSorin.csproj
+++ b/PupBuddy CA2 OanaSorin/PupBuddy CA2 OanaSorin.csproj
@@ -201,7 +201,9 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>49859</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:49859/</IISUrl>
+          <IISUrl>http://localhost:45823/</IISUrl>
+          <OverrideIISAppRootUrl>True</OverrideIISAppRootUrl>
+          <IISAppRootUrl>http://localhost:45823/</IISAppRootUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
