--- a/PupBuddy CA2 OanaSorin/PupBuddy CA2 OanaSorin.csproj
+++ b/PupBuddy CA2 OanaSorin/PupBuddy CA2 OanaSorin.csproj
@@ -135,6 +135,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="BaseClass\Base.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DAL\PuppyContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
