--- a/PupBuddy CA2 OanaSorin/PupBuddy CA2 OanaSorin.csproj
+++ b/PupBuddy CA2 OanaSorin/PupBuddy CA2 OanaSorin.csproj
@@ -135,6 +135,9 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="BaseClass\Base.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MeetingController.cs" />
+    <Compile Include="Controllers\OwnerModelsController.cs" />
+    <Compile Include="Controllers\PuppyModelsController.cs" />
     <Compile Include="DAL\PuppyContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -288,6 +291,21 @@
     <Content Include="Scripts\popper.js.map" />
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
+    <Content Include="Views\PuppyModels\Create.cshtml" />
+    <Content Include="Views\PuppyModels\Delete.cshtml" />
+    <Content Include="Views\PuppyModels\Details.cshtml" />
+    <Content Include="Views\PuppyModels\Edit.cshtml" />
+    <Content Include="Views\PuppyModels\Index.cshtml" />
+    <Content Include="Views\OwnerModels\Create.cshtml" />
+    <Content Include="Views\OwnerModels\Delete.cshtml" />
+    <Content Include="Views\OwnerModels\Details.cshtml" />
+    <Content Include="Views\OwnerModels\Edit.cshtml" />
+    <Content Include="Views\OwnerModels\Index.cshtml" />
+    <Content Include="Views\Meeting\Create.cshtml" />
+    <Content Include="Views\Meeting\Delete.cshtml" />
+    <Content Include="Views\Meeting\Details.cshtml" />
+    <Content Include="Views\Meeting\Edit.cshtml" />
+    <Content Include="Views\Meeting\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
